<resources>
    <string name="app_name">农商行供应商</string>
    <string name="empty"></string>
    <string name="user_me">我的</string>
    <string name="message">消息</string>
    <string name="modifypassword">修改登录密码</string>
    <string name="feedback">意见反馈</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="user_profile">个人名片</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入注册手机号</string>
    <string name="login_hint_password">请输入登录密码</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="bank_name">农商银行</string>
    <string name="readed">已读</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="edit">编辑</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="msg_notice">消息提醒</string>
    <string name="black_list">黑名单</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_workorder">工 单</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="message_search_no_result">无结果</string>
    <string name="picker_image_preview">预览</string>
    <string name="picker_image_send">发送</string>
    <string name="picker_image_folder">相册</string>
    <string name="picker_image_album_loading">相册加载中…</string>
    <string name="picker_image_album_empty">相册中没有图片！</string>
    <string name="picker_image_folder_info">共%d张</string>
    <string name="picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="picker_image_send_select">完成（%d）</string>
    <string name="picker_image_preview_original">发送原图</string>
    <string name="picker_image_preview_original_select">发送原图（%s）</string>
    <string name="picker_image_error">获取图片出错</string>
    <string name="image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="unknow_size">未知大小</string>
    <string name="is_send_image">是否发送该原始图片？</string>
    <string name="multi_image_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="is_send_multi_image">是否发送这些原始图片？</string>
    <string name="waitfor_image_local">正在打开相册，请稍候\u2026</string>
    <string name="recapture">重拍</string>
    <string name="image_show_error">图片显示异常</string>
    <string name="memory_out">内存不足</string>
    <string name="choose_from_photo_album">从手机相册选择</string>
    <string name="choose">选取</string>
    <string name="crop">裁剪</string>
    <string name="download_picture_fail">图片下载失败</string>
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="signature">签 名</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="nickname">姓 名</string>
    <string name="alias">备注名</string>
    <string name="phone_number">手机号码</string>
    <string name="set_head_image">设置头像</string>
    <string name="user_info_update_success">设置成功</string>
    <string name="user_info_update_cancel">取消更新</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="head_update_success">头像设置成功</string>
    <string name="head_update_failed">头像设置失败，请重试</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="workorder">工单</string>
    <string name="workorder_details">工单详情</string>
    <string name="workorder_No">工单号</string>
    <string name="customer_have_order_you">客户已下单</string>
    <string name="repair_outlets">维修网点</string>
    <string name="supplier">供应商</string>
    <string name="equipment">设备</string>
    <string name="model">型号</string>
    <string name="note">备注</string>
    <string name="workorder_tracking">工单跟踪</string>
    <string name="workorder_repair_man">工单报修人</string>
    <string name="therepair_name">报修联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="shenzheng">深圳南天东华</string>
    <string name="stay_confirmed">待确认</string>
    <string name="stay_maintenance">待维修</string>
    <string name="stay_evaluation">待评价</string>
    <string name="history_workorder">历史工单</string>
    <string name="confirm_complete">确认完成</string>
    <string name="confirmation_delivery">确认发货</string>
    <string name="express">快递公司</string>
    <string name="courier_number">快递单号</string>
    <string name="workorder_step1"><Data><![CDATA[客户<b>%1$s</b>已提交工单给<font color="#499BF7"><b>%2$s</b></font>]]></Data></string>
    <string name="workorder_step2"><Data><![CDATA[客服<font color="#499BF7"><b>%1$s</b></font>工单已转发]]></Data></string>
    <string name="workorder_step3"><Data><![CDATA[<font color="#499BF7"><b>%1$s</b></font>已接单]]></Data></string>
    <string name="workorder_step4"><Data><![CDATA[<font color="#499BF7"><b>%1$s</b></font>已收货]]></Data></string>
    <string name="workorder_step5"><Data><![CDATA[<font color="#499BF7"><b>%1$s</b></font>确认维修完成]]></Data></string>
    <string name="workorder_step6"><Data><![CDATA[<font color="#499BF7"><b>%1$s</b></font>已寄货]]></Data></string>
    <string name="workorder_step7"><Data><![CDATA[客户<font color="#499BF7"><b>%1$s</b></font>确认到货]]></Data></string>
    <string name="workorder_step8"><Data><![CDATA[客户评价<font color="#499BF7"><b>%1$s</b></font>]]></Data></string>
    <string name="workorder_step11"><Data><![CDATA[客户<b>%1$s</b>已提交工单给<font color="#499BF7"><b>%2$s</b></font>]]></Data></string>
    <string name="workorder_step12"><Data><![CDATA[服务主管<font color="#499BF7"><b>%1$s</b></font>接收工单]]></Data></string>
    <string name="workorder_step13"><Data><![CDATA[工单已转发给<font color="#499BF7"><b>%1$s</b></font>]]></Data></string>
    <string name="workorder_step14"><Data><![CDATA[服务工程师<font color="#499BF7"><b>%1$s</b></font>已接单]]></Data></string>
    <string name="workorder_step15"><Data><![CDATA[服务工程师<font color="#499BF7"><b>%1$s</b></font>已签到]]></Data></string>
    <string name="workorder_step16"><Data><![CDATA[服务工程师<font color="#499BF7"><b>%1$s</b></font>已维修完成]]></Data></string>
</resources>