<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="59dp"
                android:background="@drawable/login_logo"
                android:contentDescription="@string/empty" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="74dp">

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_login_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_account"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_login_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:focusable="false"
                        android:hint="请选择登录角色"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_white_normal"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:imeOptions="actionGo"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />


                </LinearLayout>

            </FrameLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:background="@drawable/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:paddingRight="30dip"
                android:text="忘记密码？" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>