<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_first_my_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingBottom="5dip"
        android:paddingLeft="20dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip">

        <com.grgbanking.ruralsupplier.common.util.widget.IconCenterEditText
            android:id="@+id/icet_search4"
            style="@style/editTextStyle"></com.grgbanking.ruralsupplier.common.util.widget.IconCenterEditText>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_maintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_drop_down1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/open" />

                <TextView
                    android:id="@+id/tv_maintenance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:text="@string/stay_maintenance" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_maintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">


                <ListView
                    android:id="@+id/lv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_haveinhand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_drop_down2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/open" />

                <TextView
                    android:id="@+id/tv_haveinhand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:text="进行中" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_haveinhand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">


                <ListView
                    android:id="@+id/lv2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_drop_down3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/open" />

                <TextView
                    android:id="@+id/tv_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:text="@string/stay_confirmed" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ListView
                    android:id="@+id/lv3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_drop_down4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/open" />

                <TextView
                    android:id="@+id/tv_evaluation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:text="@string/stay_evaluation" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">


                <ListView
                    android:id="@+id/lv4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_workorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="15dip">

                <ImageView
                    android:id="@+id/iv_drop_down5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/open" />

                <TextView
                    android:id="@+id/tv_workorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:text="@string/history_workorder" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_workorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ListView
                    android:id="@+id/lv5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></ListView>

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>